--- a/caccf.html
+++ b/caccf.html
@@ -20,9 +20,22 @@
         <div class="toggle" onclick="toggleMenu();"></div>
         <ul class="menu">
             <li><a href="#" onclick="toggleMenu();">Home</a></li>
-            <li><a href="#about" onclick="toggleMenu();">About</a></li>
-            <li><a href="#projects" onclick="toggleMenu();">Programs</a></li>
+            <li><a href="#" onclick="toggleMenu();">Who We Are</a></li>
+            <li><a href="#about" onclick="toggleMenu();">About <b>+</b></a>
+                <ul>
+                    <li><a href="#">Meet</a></li>
+                    <li><a href="#">Meet</a></li>
+                    <li><a href="#">Meet</a></li>
+                </ul>
+            </li>
             <li><a href="#contact" onclick="toggleMenu();">Media</a></li>
+            <li><a href="#projects" onclick="toggleMenu();">Programs <b>+</b></a>
+                <ul>
+                    <li><a href="#">Meet</a></li>
+                    <li><a href="#">Meet</a></li>
+                    <li><a href="#">Meet</a></li>
+                </ul>
+            </li>
         </ul>
         <!-- <div class="toggle-btn" id="btn">
             <span id="btnText">Dark</span>
@@ -32,17 +45,19 @@
 
     <section class="banner">
         <div class="textBx">
-            <h2 class="anim">Hi, I'm Ayomiposi🤟, <br> <span class="anim">A Frontend Developer & <br>I build things that
-                    work on the internet</span></h2>
+            <h2 class="anim">Hi, Fam🤟, <br> <span class="anim">You're welcome to City of God <br>Land of Restoration A
+                    Place where God dwells.</span></h2>
             <a href="https://drive.google.com/file/d/111shBIyM9uok0fpk54ptOD_-dhCLbXmI/view?usp=sharing"
-                class="btn anim">Resume</a>
+                class="btn anim">First Timer</a>
+            <a href="https://drive.google.com/file/d/111shBIyM9uok0fpk54ptOD_-dhCLbXmI/view?usp=sharing"
+                class="btn anim">Second Timer</a>
         </div>
     </section>
 
 
     <section class="about" id="about">
         <div class="heading">
-            <h2>0.2 About Me <span>
+            <h2>Who We Are<span>
                     <hr>
                 </span> </h2>
         </div>
@@ -72,7 +87,7 @@
 
     <section class="boxes2" id="projects">
         <div class="heading">
-            <h2 id="services-head">0.3 Projects <span>
+            <h2 id="services-head">Units<span>
                     <hr>
                 </span></h2>
         </div>
@@ -84,9 +99,9 @@
                     <!--copy the script code from ionicon under installation-->
                 </div>
                 <div class="contents">
-                    <h2>Ushering Unit</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt dolore voluptatum
-                        necessitatibus mollitia laborum itaque?</p>
+                    <h2>Evangelism Unit</h2>
+                    <p>To help and make the church see the reason why we should reach out to souls with the word of
+                        grace by preaching and teaching the word and also by it make Men disciples of Christ.</p>
                 </div>
             </div>
             <div class="serviceBox">
@@ -95,9 +110,9 @@
                     <!-- <ion-icon name="logo-html5"></ion-icon> -->
                 </div>
                 <div class="contents">
-                    <h2>Decorating Unit</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt dolore voluptatum
-                        necessitatibus mollitia laborum itaque?</p>
+                    <h2>Drama Unit</h2>
+                    <p>To boldly demostrate the word of God in sounds and actions both within and outside the Church
+                        premises.</p>
                 </div>
             </div>
             <div class="serviceBox">
@@ -107,8 +122,7 @@
                 </div>
                 <div class="contents">
                     <h2>Technincal Unit</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt dolore voluptatum
-                        necessitatibus mollitia laborum itaque?</p>
+                    <p>Is to look after the Church sound syste and maintains the Church gadget.</p>
                 </div>
             </div>
             <div class="serviceBox">
@@ -152,17 +166,15 @@
 
     <section class="contact" id="contact">
         <div class="heading white">
-            <h2>0.4 Get in Touch <span>
+            <h2>Contact Us<span>
                     <hr>
                 </span></h2>
             <p>I am currently available for hire and would love to have a chat with you about opportunities.</p>
         </div>
         <div class="handles">
             <ion-icon name="logo-twitter"><a href="https://twitter.com/AyomiposiIsrael"></a></ion-icon>
-            <ion-icon name="logo-github"><a href="https://github.com/Balpos07"></a></ion-icon>
-            <ion-icon name="logo-linkedin"><a href="https://www.linkedin.com/in/balogun-ayomiposi-2001aa21a/"></a>
-            </ion-icon>
-            <ion-icon name="logo-instagram"><a href="https://www.instagram.com/balogunayomiposiisrael/"></a></ion-icon>
+            <ion-icon name="logo-facebook"><a href="https://bit.ly/CACCFAAUAFacebook"></a></ion-icon>
+            <ion-icon name="logo-instagram"><a href="https://bit.ly/CACCFAAUAInstagram"></a></ion-icon>
         </div>
 
     </section>
